@@ -19,11 +19,16 @@ Version 3.5
   coverage.py will issue a warning, at least alerting you to the problem.
   Closes `issue 93`_.  Thanks to Marius Gedminas for the idea.
 
+- Source files are now opened with Python 3.2's ``tokenize.open()`` where
+  possible, to get the best handling of Python source files with encodings.
+  Closes `issue 107`, thanks, Brett Cannon.
+
 - Internally, files are now closed explicitly, fixing `issue 104`.  Thanks,
   Brett Cannon.
 
 .. _issue 93: http://bitbucket.org/ned/coveragepy/issue/93/copying-a-mock-object-breaks-coverage
 .. _issue 104: https://bitbucket.org/ned/coveragepy/issue/104/explicitly-close-files
+.. _issue 107: https://bitbucket.org/ned/coveragepy/issue/107/codeparser-not-opening-source-files-with
 
 
 Version 3.4 --- 19 September 2010
